set(UTILS_LIB_NAME utils)

set(UTILS_INCLUDES_DIR ${CMAKE_CURRENT_LIST_DIR} CACHE STRING "${UTILS_INCLUDES_DIR}" FORCE)
file(GLOB UTILS_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.h)
add_library(${UTILS_LIB_NAME} STATIC ${UTILS_SRC})
target_link_libraries(${UTILS_LIB_NAME} PRIVATE breakpad_client ${GITHASH_LIBRARIES})
target_include_directories(${UTILS_LIB_NAME} PUBLIC ${UTILS_INCLUDES_DIR} PRIVATE ${BREAKPAD_INCLUDE_DIRS})

set_target_properties(${UTILS_LIB_NAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
)

file(GLOB UTILS_INCLUDES ${UTILS_INCLUDES_DIR}/*.h)
install(FILES ${UTILS_INCLUDES} DESTINATION include)
install(TARGETS ${UTILS_LIB_NAME})
